yaml/nginx-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-login
  labels:
    app: nginx-login
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-login
  template:
    metadata:
      labels:
        app: nginx-login
    spec:
      nodeSelector:
        disktype: worker1  # 노드 셀렉터
      containers:
      - name: nginx
        image: kku9/nginx-login:v1.48  # 이미지 위치 수정
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "250Mi"
          limits:
            cpu: "200m"
            memory: "250Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
          successThreshold: 1
        volumes:
        - name: data
          hostPath:
            type: FileOnCreate
            path: /web


---
apiVersion: v1
kind: Service
metadata:
  name: svc-login
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30200
    protocol: TCP
  selector:
    app: nginx-login
