yaml/was-sign.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-sign
  labels:
    app: tomcat-sign
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  replicas: 2
  selector:
    matchLabels:
      app: tomcat-sign
  template:
    metadata:
      labels:
        app: tomcat-sign
    spec:
      containers:
      - name: was
        image: kku9/was-sign:8
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "500Mi"
          limits:
            cpu: "250m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1  

---
apiVersion: v1
kind: Service
metadata:
  name: svc-was
spec:
  type: ClusterIP
  clusterIP: 10.110.0.100
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: tomcat-sign
